--- a/packages/docs/src/pages/tokens/colors.stories.mdx
+++ b/packages/docs/src/pages/tokens/colors.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 
-// import { colors } from "@ignite-ui/tokens";
+// import { colors } from "@vinicius-ignite-design-system/tokens";
 // import { Meta, ColorPalette, ColorItem } from "@storybook/addon-docs";
 // import { themes, ThemeProvider, convert, ensure } from "@storybook/theming";
 
