--- a/packages/docs/src/pages/tokens/fonts.stories.mdx
+++ b/packages/docs/src/pages/tokens/fonts.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 import { TokensGrid } from "../../components/TokensGrid";
-import { fonts } from "@ignite-ui/tokens";
+import { fonts } from "@vinicius-ignite-design-system/tokens";
 
 {/* TODO: Typeset - Storybook's Typeset Doc Block helps document the fonts used throughout your project. */}
 {/* https://storybook.js.org/docs/react/writing-docs/doc-block-typeset */}
